--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
           echo "Using Gemini API Key"
           echo "GEMINI_API_KEY=$GEMINI_API_KEY"
           # Example command to use the secret (replace with actual script)
-          node your-script.js
+          node app.js
